--- a/package.json
+++ b/package.json
@@ -9,9 +9,40 @@
   "author": "Ben Meyrick <bameyrick@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.24.1",
     "cldr-core": "^31.0.1",
     "cldr-localenames-modern": "^31.0.1",
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-cssmin": "^2.2.0",
+    "grunt-contrib-pug": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-develop": "^0.4.0",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-postcss": "^0.8.0",
+    "grunt-sass": "^2.0.0",
+    "grunt-sass-lint": "^0.2.2",
+    "grunt-tslint": "^5.0.1",
+    "grunt-webpack": "^3.0.0",
+    "husky": "^0.13.4",
+    "imports-loader": "^0.7.1",
     "jsonfile": "^3.0.0",
-    "normalize-scss": "^7.0.0"
+    "load-grunt-configs": "^1.0.0",
+    "load-grunt-tasks": "^3.5.2",
+    "nodemon": "^1.11.0",
+    "normalize-scss": "^7.0.0",
+    "pug": "^2.0.0-rc.1",
+    "sass-lint": "^1.10.2",
+    "sass-math-pow": "^0.1.4",
+    "ts-loader": "^2.1.0",
+    "tslint": "^5.4.0",
+    "typescript": "^2.3.4",
+    "webpack": "^2.6.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5"
   }
 }
