--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,9 @@
         "sourceMap": false,
         "allowJs": true,
         "types": [
-            "node",
-            "webpack",
-            "webpack-env"
-         ],
-         "lib": [
+          "node"
+        ],
+        "lib": [
            "dom",
            "es2017",
            "es2016.array.include"
